# AutoRun

./: .gitignore  AppSettings.cs  AutoRun.sln  Develop_Dairy.md  Form1.Designer.cs  Form1.cs  Git中文編碼完整解決方案-最終總結.md  Git中文編碼處理指南.md  Git批次檔工具使用說明.md  Git批次檔工具創建總結.md  Git提交總結.md  Git操作規則與編碼設定.md  LICENSE  Microsoft.PowerShell_profile_example.ps1  PowerShell中文編碼解決方案.md  PowerShell編碼問題解決總結.md  Program.cs  README-Git工具.md  README.md  ScheduleItem.cs  SchedulerService.cs  SchedulerTest.cs  Storage.cs  diary.md  git-commit-push.ps1  git-commit.bat  git-helper.ps1  git-log.bat  git-menu.bat  git-push.bat  git-status.bat  install-profile.bat  pyproject.toml  run-utf8.bat  代碼驗證完成報告.md  修正啟動時顯示第一筆資料問題.md  修正說明-保持最小化選項狀態.md  修正說明-啟動排程器根據選項最小化.md  修正說明-最小化不自動啟動排程.md  修正說明.md  (+10 more)
autorun/: __init__.py  config.py  main.py  scheduler.py
config/: config.example.json
docs/: README.md
examples/: README.md  basic_example.py  config_example.py
tests/: test_config.py  test_scheduler.py
